--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,7 +16,7 @@ You can also define OS-dependent <code>.idea/jdk.table.*.xml</code> files like s
   <resource-bundle>messages</resource-bundle>
   <version>2.0</version>
 
-  <depends>com.intellij.modules.java</depends>
+  <depends>com.intellij.modules.python</depends>
 
   <extensions defaultExtensionNs="com.intellij">
     <notificationGroup id="Per Project JDK Settings" displayType="BALLOON"/>
